--- a/djangosnippets/snippets/templates/snippets/top.html
+++ b/djangosnippets/snippets/templates/snippets/top.html
@@ -4,6 +4,29 @@
         <title>Django スニペット</title>
     </head>
     <body>
-        <p>Hello World</p>
+        <h1>ようこそ Django スニペットへ！</h1>
+        <h2>スニペット一覧</h2>
+        {% if snippets %}
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>投稿者</th>
+                    <th>投稿日</th>
+                    <th>タイトル</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for snippet in snippets %}
+                <tr>
+                    <th>{{ snippet.created_by.username }}</th>
+                    <th>{{ snippet.created_at }}</th>
+                    <th><a href="{% url 'snippet_detail' snippet.id %}">{{ snippet.title }}</a></th>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        {% else %}
+        <p>スニペットはまだ投稿されていません。</p>
+        {% endif %}
     </body>
 </html>
