--- a/djangosnippets/snippets/templates/snippets/top.html
+++ b/djangosnippets/snippets/templates/snippets/top.html
@@ -1,50 +1,33 @@
-{% load static %}
-{% load django_bootstrap5 %}
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Django スニペット</title>
-        {% bootstrap_css %}
-        {% bootstrap_javascript %}
-        <link rel="stylesheet" href="{% static 'snippets/css/style.css' %}">
-    </head>
-    <body>
-        <nav class="navbar navbar-expand flex-md-row navbar-dark bg-dark">
-            <div class="container justify-brand">
-                <a href="/" class="navbar-brand">Django スニペット</a>
-            </div>
-        </nav>
-        <main>
-            <div class="container">
-                <div class="welcome">
-                    <h1 class="title">ようこそ Django スニペットへ！</h1>
-                    <p class="subtitle">あなたの知見を共有しましょう</p>
-                    <a class="btn btn-primary" href="{% url 'snippet_new' %}">スニペットを作成する</a>
-                </div>
+{% extends "base.html" %}
 
-                {% if snippets %}
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>投稿者</th>
-                            <th>投稿日</th>
-                            <th>タイトル</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for snippet in snippets %}
-                        <tr>
-                            <th>{{ snippet.created_by.username }}</th>
-                            <th>{{ snippet.created_at }}</th>
-                            <th>{{ snippet.title }}</th>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-                {% else %}
-                <p>スニペットはまだ投稿されていません。</p>
-                {% endif %}
-            </div>
-        </main>
-    </body>
-</html>
+
+{% block main %}
+<div class="welcome">
+    <h1 class="title">ようこそ Django スニペットへ！</h1>
+    <p class="subtitle">あなたの知見を共有しましょう</p>
+    <a class="btn btn-primary" href="{% url 'snippet_new' %}">スニペットを作成する</a>
+</div>
+
+{% if snippets %}
+<table class="table">
+    <thead>
+        <tr>
+            <th>投稿者</th>
+            <th>投稿日</th>
+            <th>タイトル</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for snippet in snippets %}
+        <tr>
+            <th>{{ snippet.created_by.username }}</th>
+            <th>{{ snippet.created_at }}</th>
+            <th>{{ snippet.title }}</th>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+{% else %}
+<p>スニペットはまだ投稿されていません。</p>
+{% endif %}
+{% endblock %}
