--- a/djangosnippets/snippets/templates/snippets/top.html
+++ b/djangosnippets/snippets/templates/snippets/top.html
@@ -22,7 +22,7 @@
         <tr>
             <th>{{ snippet.created_by.username }}</th>
             <th>{{ snippet.created_at }}</th>
-            <th>{{ snippet.title }}</th>
+            <th><a href="{% url 'snippet_detail' snippet.id %}">{{ snippet.title }}</a></th>
         </tr>
         {% endfor %}
     </tbody>
