--- a/djangosnippets/templates/base.html
+++ b/djangosnippets/templates/base.html
@@ -14,6 +14,13 @@
     <nav class="navbar navbar-expand flex-md-row navbar-dark bg-dark">
         <div class="container justify-brand">
             <a href="/" class="navbar-brand">Django スニペット</a>
+            <ul class="navbar-nav mr-md-2">
+                {% if user.is_authenticated %}
+                <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">ログアウト</a></li>
+                {% else %}
+                <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">ログイン</a></li>
+                {% endif %}
+            </ul>
         </div>
     </nav>
     <main>
